[project]
name = "dvz"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yama-yeah", email = "b1021091@fun.ac.jp" }
]
dependencies = [
    "retry>=0.9.2",
    "jageocoder>=2.1.2",
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "seaborn>=0.13.1",
    "polars>=0.20.3",
    "beautifulsoup4>=4.12.2",
    "tqdm>=4.66.1",
    "requests>=2.31.0",
    "ipykernel>=6.28.0",
    "plotly>=5.18.0",
    "nbformat>=5.9.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
